[package]
name = "reswmm-cli"
version = "0.1.0"
authors = ["Reese Walton <jrwalt4@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.reswmm-core]
path = "../reswmm-core"
features = ["custom_elements"]

[dependencies.clap]
version = "~2.27.0"
features = [ "yaml" ]
