[package]
name = "reswmm-core"
version = "0.1.0"
authors = ["Reese Walton <jrwalt4@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
furlong = { git = "https://github.com/jrwalt4/furlong.git", branch = "main" }
enum_dispatch = "0.3"
rusqlite = "0.28.0"

[features]
custom_nodes = []
custom_links = []
custom_regions = []
custom_elements = [
    "custom_nodes",
    "custom_links",
    "custom_regions"
]
