[package]
name = "reswmm-core"
version = "0.1.0"
authors = ["Reese Walton <jrwalt4@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
furlong = { path = "../furlong"}
enum_dispatch = "0.3"
rusqlite = "0.28.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.23"
num-traits = "0.2.15"
itertools = "0.10"
specs = { version = "0.18", features = ["derive"]}

[dev-dependencies]
serde_json = "1.0"

[features]
custom_nodes = []
custom_links = []
custom_regions = []
custom_elements = [
    "custom_nodes",
    "custom_links",
    "custom_regions"
]
